Correcion del getTotalElements y Implementacion de el id en la categroia y el nombre de los articulos